Closed
Bug 218651
Opened 22 years ago
Closed 22 years ago
Favicon isn't appearing
Categories
(Core :: Graphics: ImageLib, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: abusenospam, Assigned: tor)
References
()
Details
(Keywords: fixed1.5)
Attachments
(2 files)
|
734 bytes,
patch
|
pavlov
:
review+
bryner
:
superreview+
asa
:
approval1.5+
|
Details | Diff | Splinter Review |
|
2.19 KB,
image/x-icon
|
Details |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5a) Gecko/20030824 Mozilla Firebird/0.6.1
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5a) Gecko/20030824 Mozilla Firebird/0.6.1
Favicon on this webpage work with Internet Explorer and Konqueror, but not with
Mozilla or Mozilla Firebird
HTML is (I think) correct
link REL="shortcut icon" HREF="/favicon/favicon.ico" TYPE="image/x-icon"
And so is the icon file since other browsers can display it
Reproducible: Always
Steps to Reproduce:
1. Go to http://abusenospam.free.fr/favicon/test.html
2. See no favicon
3.
Actual Results:
Favicon is not displayed
Expected Results:
Mozilla should have displayed it like konqueror / ie do
Updated•22 years ago
|
Summary: http://abusenospam.free.fr/favicon/test.html → Favicon isn't appearing
Comment 1•22 years ago
|
||
Try it without the 'shortcut', that might work.
For example:
<link rel="icon" href="http://mozilla.org/images/mozilla-16.png" type="image/png">
Reassign to the bmp/ico expert.
Assignee: general → cbiesinger
Status: UNCONFIRMED → NEW
Component: Browser-General → ImageLib
Ever confirmed: true
Reporter: what program was used to generate this ICO? It has a reserved field
in the image format set to a value we didn't expect.
Updated•22 years ago
|
OS: Linux → All
Attachment #131087 -
Flags: superreview?(bryner)
Attachment #131087 -
Flags: review?(pavlov)
Updated•22 years ago
|
Attachment #131087 -
Flags: superreview?(bryner) → superreview+
Updated•22 years ago
|
Attachment #131087 -
Flags: review?(pavlov) → review+
Sorry, I don't know what program was used to generate the icon.
Actually, this is the favicon of a site that I visit regulary, and I was annoyed
that the favicon would work in other browsers but not in Mozilla.
I only put it on a separate & trvial web page for convenience.
I could try asking the webmaster of the site if you feel this is important, but
he probably did it in 10 minutes a couple of years ago with some shareware, so
I'm not sure he'd remember the name
Updated•22 years ago
|
Flags: blocking1.5?
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 8•22 years ago
|
||
http://abusenospam.free.fr/favicon/test.html now works for me using build
2003-09-17-04 on Windows 2000.
Someone with Linux, could you verify that it works for you and mark the bug
verified? Thanks.
Comment 10•22 years ago
|
||
not going to hold the release for this. setting approval request to land patch
on 1.5 branch.
Flags: blocking1.5? → blocking1.5-
Updated•22 years ago
|
Attachment #131087 -
Flags: approval1.5?
Comment 11•22 years ago
|
||
Comment on attachment 131087 [details] [diff] [review]
ignore contents of directory entry reserved field
a=asa (on behalf of drivers) for checkin to the Mozilla 1.5 branch. Please add
the fixed1.5 keyword when this is landed on the branch. Thanks.
Attachment #131087 -
Flags: approval1.5? → approval1.5+
Comment 13•21 years ago
|
||
icon from the url. seems to be unchanged.
You need to log in
before you can comment on or make changes to this bug.
Description
•