Bug 218651 - ignore contents of ICO directory entry reserved field. r=pavlov, sr=bryner